# RiquezaDigital

./: .gitignore  ARQUITECTURA.md  CLAUDE.md  Claudia.ps1  n8n-architect.toml  skills-lock.json  tasks.md
.claude/: settings.local.json
.claude/commands/: Claudia.md  auditar-cuenta.md  autopilot-diseno.md  boveda-post.md  cierre-sesion.md  context-validator.md  crear-campaña.md  generar-copy.md  generar-prompt-web.md  nuevo-cliente.md  reporte-semanal.md  wp-edit.md  wp-page-rd.md
.playwright-mcp/: page-2026-05-28T01-13-05-955Z.yml  page-2026-06-02T21-28-28-656Z.yml
.remember/: remember-keller-tasks.md  remember-vibiz.md  remember.md
.remember/sessions/: 2026-05-26_1817.md  2026-05-26_1830.md  2026-05-26_1953.md  2026-05-26_1958.md  2026-05-26_2015.md  2026-05-27_2118.md  2026-05-27_2232.md  2026-05-28_0333.md  2026-05-28_0334.md  2026-06-03_0007.md  2026-06-03_0011.md  2026-06-03_0330.md  2026-06-03_0447.md  INDEX.md  (+11 more)
agencia/: AGENCIA-AGENTICA.md
pipelines/edicion-video/: .env.example  .gitignore  editar.py  iniciar_watcher.bat  package-lock.json  package.json  project.md  pyproject.toml  watcher.py
pipelines/edicion-video/.claude/: settings.local.json
pipelines/edicion-video/.claude/commands/: video-educativo.md  video-marketing.md  video-social.md
pipelines/edicion-video/animations/intro/: composition.html
pipelines/edicion-video/edit/: edl.ejemplo.json  edl.json  highlights.json  subtitles.ass  watcher_processed.json
pipelines/edicion-video/helpers/: multi_format.py  pack_transcripts.py  render.py  sounds.py  subtitles.py  transcribe.py  utils.py
(+255 files in other folders)
