[project]
name = "riqueza-digital-video-studio"
version = "1.0.0"
description = "Estudio de edición de vídeo Riqueza Digital"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "librosa>=0.10.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
